fix typo in sac2

--- a/seminar/sac2/main.tex
+++ b/seminar/sac2/main.tex
@@ -484,6 +484,6 @@ Gradient of $\nabla J_\pi (\phi)$ can be estimated by
         \includegraphics[width=0.45\textwidth]{fig6.png}
         \includegraphics[width=0.45\textwidth]{fig7.png}
     \end{figure}
-\end{frame}s
+\end{frame}
 
 \end{document}
